Fixed alignment issue and reduced class names.

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,33 +2,25 @@
   display: flex;
   position: sticky;
   top: 0;
+  justify-content: space-between;
   background-color: black;
   box-sizing: border-box;
   padding-left: 1.1rem;
-  margin: 0;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding-right: 3rem;
   align-items: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .Navbar__group {
   display: flex;
   height: 100%;
   list-style-type: none;
   justify-content: space-evenly;
+  align-items: center;
   gap: 1rem;
 }
-.Navbar__group--right {
-  margin-left: auto;
-  margin-right: 3rem;
-}
-.Navbar__item {
-  position: relative;
-  top: 1rem;
-}
+
 .Navbar__netflixlogo {
   margin-right: 20px;
   height: 3rem;
   width: 5rem;
-}
-.Navbar__item--pad {
-  padding-top: 0.5rem;
 }
